# prv_cmp

./: .gitmodules  CMakeLists.txt  README.md  demo.sh
demo/: CMakeLists.txt  comparison.cpp
demo/dec/: config.txt  main.cpp  server.hpp  server_enc.hpp  server_eval.hpp
demo/enc/: main.cpp
demo/eval/: main.cpp
demo/share/: define.hpp
include/: TODO  cmp_param_list.hpp  eval_util.hpp  poly_util.hpp
prv_cmp/: cmp_param_list.hpp  param_check.hpp
prvc/: CMakeLists.txt  eval_util.hpp
prvc/prvc_dec/: CMakeLists.txt  prvc_dec_callback_function.cpp  prvc_dec_callback_function.hpp  prvc_dec_callback_function_enc.cpp  prvc_dec_callback_function_enc.hpp  prvc_dec_callback_function_eval.cpp  prvc_dec_callback_function_eval.hpp  prvc_dec_callback_param.cpp  prvc_dec_callback_param.hpp  prvc_dec_enc_param.hpp  prvc_dec_eval_param.hpp  prvc_dec_server.cpp  prvc_dec_server.hpp  prvc_dec_srv.cpp  prvc_dec_srv.hpp  prvc_dec_state.cpp  prvc_dec_state.hpp  prvc_dec_state_enc.cpp  prvc_dec_state_enc.hpp  prvc_dec_state_eval.cpp  prvc_dec_state_eval.hpp  prvc_dec_thread.cpp  prvc_dec_thread.hpp
prvc/prvc_enc/: prvc_enc.cpp  prvc_enc.hpp  prvc_enc_dec_client.cpp  prvc_enc_dec_client.hpp  prvc_enc_eval_client.cpp  prvc_enc_eval_client.hpp
prvc/prvc_eval/: CMakeLists.txt  prvc_eval_callback_function.cpp  prvc_eval_callback_function.hpp  prvc_eval_callback_param.cpp  prvc_eval_callback_param.hpp  prvc_eval_client.cpp  prvc_eval_client.hpp  prvc_eval_dec_client.cpp  prvc_eval_dec_client.hpp  prvc_eval_enc_comparator.cpp  (+7 more)
src/: TODO
test/: run.sh  testcase.csv
(+20 files in other folders)
